--- a/index.html
+++ b/index.html
@@ -21,10 +21,15 @@
         <p>Rien n’est stable ni parfait en soi, même si je te trouve parfaite avec tes imperfections. 🌷 La morale est que tu ne te battras jamais seule. Il te faut toujours de la compagnie pour t’aider à porter les fardeaux que tu supportes seule. 🤗 Peut-être que ce que je viens de dire ne te rappelle rien, mais sache que je parle aussi d’un futur lointain. Entoure-toi des bons, et sois entourée de gens aussi formidables que toi. 🌟</p>
         
         <p>Meriem, après cette longue introduction, je te félicite et te souhaite un joyeux anniversaire de tout mon cœur et cerveau, hahaha ! 🎉🎂 Que Dieu veille toujours sur toi et que tu connaisses uniquement le bonheur avec ce nouveau départ. 🌟🙏</p>
+        </p>AZOUAOU
     </div>
-    <audio autoplay>
+    <audio id="background-music" loop>
         <source src="audio/melodie.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio>
+    <div id="music-control">
+        <button id="music-button" onclick="toggleMusic()">🎵</button>
+        <span id="music-text">Jouer la musique</span>
+    </div>
 </body>
 </html>
